# serializer version: 1
# name: test_setup[media_player.arcam_fmj_127_0_0_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.arcam_fmj_127_0_0_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 200588>,
    'translation_key': None,
    'unique_id': '456789abcdef-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[media_player.arcam_fmj_127_0_0_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1)',
      'supported_features': <MediaPlayerEntityFeature: 200588>,
      'volume_level': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.arcam_fmj_127_0_0_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_setup[media_player.arcam_fmj_127_0_0_1_zone_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'media_player',
    'entity_category': None,
    'entity_id': 'media_player.arcam_fmj_127_0_0_1_zone_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <MediaPlayerEntityFeature: 135052>,
    'translation_key': None,
    'unique_id': '456789abcdef-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[media_player.arcam_fmj_127_0_0_1_zone_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Arcam FMJ (127.0.0.1) Zone 2',
      'supported_features': <MediaPlayerEntityFeature: 135052>,
      'volume_level': 0.0,
    }),
    'context': <ANY>,
    'entity_id': 'media_player.arcam_fmj_127_0_0_1_zone_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
